Fixed: Navi z-index.

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -209,7 +209,7 @@ sideNavi {
   filter: none;
   background: var(--bg-gray);
   transition: left 0.2s ease-in-out;
-  z-index: 4;
+  z-index: 5;
 }
 
 sideNavi.open {
